RESOLVED FIXED129060
[CSS Shapes] inset and inset-rectangle trigger assert with replaced element and large percentage dimension
https://bugs.webkit.org/show_bug.cgi?id=129060
Summary [CSS Shapes] inset and inset-rectangle trigger assert with replaced element a...
Bem Jones-Bey
Reported 2014-02-19 14:02:16 PST
[CSS Shapes] inset and inset-rectangle trigger assert with iframe and large percentage width
Attachments
Patch (6.45 KB, patch)
2014-02-19 14:03 PST, Bem Jones-Bey
no flags
Patch (6.58 KB, patch)
2014-02-19 14:37 PST, Bem Jones-Bey
no flags
Patch (6.60 KB, patch)
2014-02-26 12:02 PST, Bem Jones-Bey
no flags
Bem Jones-Bey
Comment 1 2014-02-19 14:03:27 PST
Bem Jones-Bey
Comment 2 2014-02-19 14:37:27 PST
Bem Jones-Bey
Comment 3 2014-02-20 11:20:46 PST
smfr, would you review?
Simon Fraser (smfr)
Comment 4 2014-02-20 11:29:54 PST
Comment on attachment 224679 [details] Patch I thought you were going to change the tests to use <img>?
Bem Jones-Bey
Comment 5 2014-02-20 11:58:53 PST
(In reply to comment #4) > (From update of attachment 224679 [details]) > I thought you were going to change the tests to use <img>? I didn't because that requires me to say <img src="blabla"> instead of just <img>, so I thought the <iframe> was simpler. Do you think the test makes more sense if it uses <img> instead of <iframe>?
Bem Jones-Bey
Comment 6 2014-02-24 13:19:37 PST
Simon, do you want me to use img instead of iframe even though I'll have to include a dummy image in the test?
Bem Jones-Bey
Comment 7 2014-02-26 12:02:20 PST
Created attachment 225272 [details] Patch Looks like I can get around needing an actual image by setting the height and width on the img tag. So here it is with an img tag instead of the iframe.
WebKit Commit Bot
Comment 8 2014-02-26 13:21:41 PST
Comment on attachment 225272 [details] Patch Clearing flags on attachment: 225272 Committed r164743: <http://trac.webkit.org/changeset/164743>
WebKit Commit Bot
Comment 9 2014-02-26 13:21:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.